--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
 
     <nav class="navbar navbar-default">
       <div class="container-fluid">
-
+        <div class="navbar-header">
+          <a class="navbar-brand" href="#">
+             <img src="images/logo.png" alt="" />
+          </a>
+        </div>
       </div>
     </nav>
 
