--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="container-fluid">
         <div class="navbar-header">
           <a class="navbar-brand" href="#">
-             <img src="images/logo.png" alt="" />
+            <img src="images/logo.png" alt="" />
           </a>
         </div>
       </div>
@@ -34,12 +34,34 @@
       <div class="col-md-7">
         <div class="row row-no-padding">
           <div class="col-md-12">
-            <div class="doc"></div>
+            <div class="doc">
+              <div class="row">
+                <div class="col-md-8">
+                  <h2>Документооборот</h2>
+                </div>
+                <div class="col-md-4">
+                  <p>Срок исполнения</p>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
         <div class="row row-no-padding">
           <div class="col-md-12">
-            <div class="sob"></div>
+            <div class="sob">
+              <div class="row">
+                <div class="col-md-8">
+                  <h3>События</h3>
+                </div>
+                <div class="col-md-4">
+                  <div class="btn-group" role="group" aria-label="...">
+                    <button type="button" class="btn btn-default">Сегодня</button>
+                    <button type="button" class="btn btn-default">Месяц</button>
+                    <button type="button" class="btn btn-default">Неделя</button>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
