Fixed merge conflict

--- a/index.html
+++ b/index.html
@@ -35,7 +35,11 @@
 
     <div class="container-fluid">
       <div class="row row-no-padding">
+
+        <!-- Left half of the screen -->
         <div class="col-md-7">
+
+          <!-- Upper tile -->
           <div class="row row-no-padding">
             <div class="col-md-12">
               <div class="doc">
@@ -50,6 +54,8 @@
               </div>
             </div>
           </div>
+
+          <!-- Lower tile -->
           <div class="row row-no-padding">
             <div class="col-md-12">
               <div class="sob">
@@ -65,82 +71,74 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-md-7">
-                  <div class="row row-no-padding">
-                    <div class="col-md-12">
-                      <div class="doc"></div>
-                    </div>
-                  </div>
-                  <div class="row row-no-padding">
-                    <div class="col-md-12">
-                      <div class="sob"></div>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="col-md-5">
-                  <div class="row row-no-padding">
-                    <div class="col-md-5">
-                      <div class="bd"></div>
-                    </div>
-                    <div class="col-md-7">
-                      <div class="uve"></div>
-                    </div>
-                  </div>
-                  <div class="row row-no-padding">
-                    <div class="col-md-12">
-                      <div class="news"></div>
-                    </div>
-                  </div>
-                  <div class="row row-no-padding">
-                    <div class="col-md-3">
-                      <div class="ph"></div>
-                    </div>
-                    <div class="col-md-3">
-                      <div class="ph"></div>
-                    </div>
-                    <div class="col-md-3">
-                      <div class="ph"></div>
-                    </div>
-                    <div class="col-md-3">
-                      <div class="ph"></div>
-                    </div>
-                  </div>
-                  <div class="row row-no-padding">
-                    <div class="col-md-12">
-                      <div class="otsu"></div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-
-              <div class="row">
-                <div class="col-md-12">
-                  <div id="footer-carousel" class="owl-carousel">
-                    <div> Your Content </div>
-                    <div> Your Content </div>
-                    <div> Your Content </div>
-                    <div> Your Content </div>
-                    <div> Your Content </div>
-                    <div> Your Content </div>
-                    <div> Your Content </div>
-                  </div>
-                </div>
               </div>
             </div>
+          </div>
+        </div>
+
+        <div class="col-md-5">
+          <div class="row row-no-padding">
+            <div class="col-md-5">
+              <div class="bd"></div>
+            </div>
+            <div class="col-md-7">
+              <div class="uve"></div>
+            </div>
+          </div>
+          <div class="row row-no-padding">
+            <div class="col-md-12">
+              <div class="news"></div>
+            </div>
+          </div>
+          <div class="row row-no-padding">
+            <div class="col-md-3">
+              <div class="ph"></div>
+            </div>
+            <div class="col-md-3">
+              <div class="ph"></div>
+            </div>
+            <div class="col-md-3">
+              <div class="ph"></div>
+            </div>
+            <div class="col-md-3">
+              <div class="ph"></div>
+            </div>
+          </div>
+          <div class="row row-no-padding">
+            <div class="col-md-12">
+              <div class="otsu"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-12">
+          <div id="footer-carousel" class="owl-carousel">
+            <div> Your Content </div>
+            <div> Your Content </div>
+            <div> Your Content </div>
+            <div> Your Content </div>
+            <div> Your Content </div>
+            <div> Your Content </div>
+            <div> Your Content </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
 
-            <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-            <script src="javascripts/bootstrap.min.js"></script>
-            <script src="javascripts/owl.carousel.min.js"></script>
-            <script>
-              $(document).ready(function() {
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script src="javascripts/bootstrap.min.js"></script>
+    <script src="javascripts/owl.carousel.min.js"></script>
+    <script>
+      $(document).ready(function() {
 
-                $("#footer-carousel").owlCarousel({
-                  navigation: true
-                });
+        $("#footer-carousel").owlCarousel({
+          navigation: true
+        });
 
-              });
-            </script>
-            </body>
-          </html>
+      });
+    </script>
+  </body>
+</html>
