marked up navbar

--- a/index.html
+++ b/index.html
@@ -23,12 +23,28 @@
         <div class="navbar-header">
           <a class="navbar-brand" href="#">
             <img src="images/logo.png" class="image-responsive" alt="">
-            <p>Внутренний портал судебных органов</p>
+            <p class="brand">Внутренний портал судебных органов</p>
           </a>
         </div>
         <ul class="nav navbar-nav">
-          <li><a href="#">Link</a></li>
-          <li><a href="#">Link</a></li>
+          <li><img src="images/scales.png" class="image-responsive" alt=""></li>
+          <li><a href="#"><i class="fa fa-inbox"></i></a></li>
+          <li><a href="#"><i class="fa fa-briefcase"></i></a></li>
+          <li><a href="#"><i class="fa fa-video-camera"></i></a></li>
+          <li><a href="#"><i class="fa fa-life-ring"></i></a></li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="#">Русский</a></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Тиштыбаев А.А. <span class="fa fa-angle-down"></span></a>
+            <ul class="dropdown-menu" role="menu">
+              <li><a href="#">Action</a></li>
+              <li><a href="#">Another action</a></li>
+              <li><a href="#">Something else here</a></li>
+              <li class="divider"></li>
+              <li><a href="#">Separated link</a></li>
+            </ul>
+          </li>
         </ul>
       </div>
     </nav>
@@ -76,6 +92,8 @@
           </div>
         </div>
 
+
+        <!-- Right half of the screen -->
         <div class="col-md-5">
           <div class="row row-no-padding">
             <div class="col-md-5">
