--- a/index.html
+++ b/index.html
@@ -26,23 +26,26 @@
             <p class="brand">Внутренний портал судебных органов</p>
           </a>
         </div>
-        <ul class="nav navbar-nav">
-          <li><img src="images/scales.png" class="image-responsive" alt=""></li>
-          <li><a href="#"><i class="fa fa-inbox"></i></a></li>
-          <li><a href="#"><i class="fa fa-briefcase"></i></a></li>
-          <li><a href="#"><i class="fa fa-video-camera"></i></a></li>
-          <li><a href="#"><i class="fa fa-life-ring"></i></a></li>
+        <ul class="nav navbar-nav navbar-left">
+          <li>
+            <a href="#" class="navbar-icon">
+              <img src="images/scales.png" class="image-responsive" alt="" />
+            </a>
+          </li>
+          <li><a href="#" class="navbar-icon"><i class="fa fa-inbox"></i></a></li>
+          <li><a href="#" class="navbar-icon"><i class="fa fa-briefcase"></i></a></li>
+          <li><a href="#" class="navbar-icon"><i class="fa fa-video-camera"></i></a></li>
+          <li><a href="#" class="navbar-icon"><i class="fa fa-life-ring"></i></a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="#">Русский</a></li>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Тиштыбаев А.А. <span class="fa fa-angle-down"></span></a>
+          <li class="topbar-text"><a href="#">Русский</a></li>
+          <li class="topbar-text dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+              Тиштыбаев А.А.
+              <span class="fa fa-angle-down"></span>
+            </a>
             <ul class="dropdown-menu" role="menu">
-              <li><a href="#">Action</a></li>
-              <li><a href="#">Another action</a></li>
-              <li><a href="#">Something else here</a></li>
-              <li class="divider"></li>
-              <li><a href="#">Separated link</a></li>
+              <li><a href="#">Some action</a></li>
             </ul>
           </li>
         </ul>
