--- a/index.html
+++ b/index.html
@@ -80,11 +80,11 @@
                     <h3>События</h3>
                   </div>
                   <div class="col-md-4">
-                    <div class="btn-group" role="group" aria-label="...">
-                      <button type="button" class="btn btn-default">Сегодня</button>
-                      <button type="button" class="btn btn-default">Месяц</button>
-                      <button type="button" class="btn btn-default">Неделя</button>
-                    </div>
+                    <ul>
+                      <li class="active"><a href="#">Сегодня</a></li>
+                      <li><a href="#">Месяц</a></li>
+                      <li><a href="#">Неделя</a></li>
+                    </ul>
                   </div>
                 </div>
               </div>
