second tile prototype

--- a/index.html
+++ b/index.html
@@ -90,6 +90,37 @@
                     </ul>
                   </div>
                 </div>
+                <div class="row">
+                  <div class="col-md-12">
+                    <table cellspacing="10" width="100%">
+                      <tr>
+                        <td>10:00</td>
+                        <td>Совещание с Торелик по вопросам интеграции</td>
+                      </tr>
+                      <tr>
+                        <td>12:00</td>
+                        <td>Демонстрация систем управления</td>
+                      </tr>
+                      <tr>
+                        <td>16:00</td>
+                        <td>Замена существующих табличек на 2-м этаже на новые</td>
+                      </tr>
+                      <tr>
+                        <td>17:00</td>
+                        <td>Презентация новой системы для ведения дел судебных органов</td>
+                      </tr>
+                      <tr>
+                        <td>18:00</td>
+                        <td>На сегодня событий больше не запланировано</td>
+                      </tr>
+                    </table>
+                  </div>
+                </div>
+                <div class="row bottom">
+                  <div class="col-md-12 text-right show-all-container">
+                    <a href="#" class="show-all">Показать все события</a>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
