--- a/index.html
+++ b/index.html
@@ -169,15 +169,63 @@
             <div class="col-md-5">
               <div class="bd"></div>
             </div>
+
             <div class="col-md-7">
-              <div class="uve"></div>
+              <div class="uve">
+                <div class="row">
+                  <div class="col-md-12">
+                    <h3>Уведомления</h3>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-md-12 text-center">
+                    <p>Мои уведомления</p>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-md-12">
+                    <table>
+                      <tr>
+                        <td>09:00</td>
+                        <td><a href="#">Собрание в зале заседания</a></td>
+                      </tr>
+                      <tr>
+                        <td>12:30</td>
+                        <td><a href="#">Проверить АВФ</a></td>
+                      </tr>
+                      <tr>
+                        <td>16:00</td>
+                        <td><a href="#">Предоставить отчет по АРМ</a></td>
+                      </tr>
+                    </table>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-md-12 text-right">
+                    <a href="#" class="show-all">Показать все уведомления</a>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
+
           <div class="row row-no-padding">
             <div class="col-md-12">
-              <div class="news"></div>
+              <div class="news">
+                <div class="row">
+                  <div class="col-md-6">
+                    <h3>Новости</h3>
+                  </div>
+                  <div class="col-md-6 text-right">
+                    <ul>
+                      <li><a href="#" class="icon"><i class="fa-newspaper-o"></i></a></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
+
           <div class="row row-no-padding">
             <div class="col-md-3">
               <div class="ph"></div>
@@ -220,13 +268,13 @@
     <script src="javascripts/bootstrap.min.js"></script>
     <script src="javascripts/owl.carousel.min.js"></script>
     <script>
-$(document).ready(function() {
+      $(document).ready(function() {
 
-  $("#footer-carousel").owlCarousel({
-    navigation: true
-  });
+        $("#footer-carousel").owlCarousel({
+          navigation: true
+        });
 
-});
+      });
     </script>
   </body>
 </html>
