Lato font included

--- a/index.html
+++ b/index.html
@@ -113,13 +113,13 @@
           <!-- Lower tile -->
           <div class="row row-no-padding">
             <div class="col-md-12">
-              <div class="sob">
+              <section id="events">
                 <div class="row">
                   <div class="col-md-8">
                     <h3>События</h3>
                   </div>
                   <div class="col-md-4">
-                    <ul>
+                    <ul class="toggle-date-range">
                       <li class="active"><a href="#">Сегодня</a></li>
                       <li><a href="#">Месяц</a></li>
                       <li><a href="#">Неделя</a></li>
@@ -128,36 +128,36 @@
                 </div>
                 <div class="row">
                   <div class="col-md-12">
-                    <table cellspacing="10" width="100%">
+                    <table>
                       <tr>
                         <td>10:00</td>
-                        <td>Совещание с Торелик по вопросам интеграции</td>
+                        <td><a href="#">Совещание с Торелик по вопросам интеграции</a></td>
                       </tr>
                       <tr>
                         <td>12:00</td>
-                        <td>Демонстрация систем управления</td>
+                        <td><a href="#">Демонстрация систем управления</a></td>
                       </tr>
                       <tr>
                         <td>16:00</td>
-                        <td>Замена существующих табличек на 2-м этаже на новые</td>
+                        <td><a href="#">Замена существующих табличек на 2-м этаже на новые</a></td>
                       </tr>
                       <tr>
                         <td>17:00</td>
-                        <td>Презентация новой системы для ведения дел судебных органов</td>
+                        <td><a href="#">Презентация новой системы для ведения дел судебных органов</a></td>
                       </tr>
                       <tr>
                         <td>18:00</td>
-                        <td>На сегодня событий больше не запланировано</td>
+                        <td><a href="#">На сегодня событий больше не запланировано</a></td>
                       </tr>
                     </table>
                   </div>
                 </div>
-                <div class="row bottom">
-                  <div class="col-md-12 text-right show-all-container">
+                <div class="row">
+                  <div class="col-md-12 text-right">
                     <a href="#" class="show-all">Показать все события</a>
                   </div>
                 </div>
-              </div>
+              </section>
             </div>
           </div>
         </div>
