red green orange block complete

--- a/index.html
+++ b/index.html
@@ -222,6 +222,22 @@
                     </ul>
                   </div>
                 </div>
+                <div class="row">
+                  <div class="col-md-9 text-left">
+                    <p>08/05/2015</p>
+                    <p>В КазНУ им. аль-Фараби состоялось расширенное заседание Президиума Ассоциации выпускников с участием К.Мами</p>
+                  </div>
+                </div>
+                <div class="row more">
+                  <div class="col-md-12 text-right">
+                    <a href="#">Подробнее</a>
+                  </div>
+                </div>
+                <div class="row all-news">
+                  <div class="col-md-12 text-right">
+                    <a href="#">Показать все новости</a>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -240,11 +256,27 @@
               <div class="ph"></div>
             </div>
           </div>
+
           <div class="row row-no-padding">
             <div class="col-md-12">
-              <div class="otsu"></div>
+              <div class="otsu">
+                <div class="row">
+                  <div class="col-md-12 text-left">
+                    <h3>Отсутствующие</h3>
+                    <p>Надзорная судебная коллегия по уголовным делам <b>1</b></p>
+                    <p>Надзорная судебная коллегия по гражданским и административным делам <b>3</b></p>
+                    <p>Департемент по обеспечению деятельности судов <b>5</b></p>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-md-12 text-right">
+                    <a href="#">Показать всех</a>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
+
         </div>
       </div>
 
