--- a/index.html
+++ b/index.html
@@ -244,16 +244,28 @@
 
           <div class="row row-no-padding">
             <div class="col-md-3">
-              <div class="ph"></div>
+              <div class="ph">
+                <a href="#"><img src="images/torelik.png"></a>
+                <p>ТОРЕЛИК</p>
+              </div>
             </div>
             <div class="col-md-3">
-              <div class="ph"></div>
+              <div class="ph">
+                <a href="#"><img src="images/e-arh.png"></a>
+                <p>Е-АРХИВ</p>
+              </div>
             </div>
             <div class="col-md-3">
-              <div class="ph"></div>
+              <div class="ph">
+                <a href="#"><img src="images/e-kad.png"></a>
+                <p>Е-КАДРЫ</p>
+              </div>
             </div>
             <div class="col-md-3">
-              <div class="ph"></div>
+              <div class="ph">
+                <a href="#"><img src="images/avf.png"></a>
+                <p>АВФ</p>
+              </div>
             </div>
           </div>
 
