--- a/index.html
+++ b/index.html
@@ -324,11 +324,12 @@
       <div class="row">
         <div class="col-md-12">
           <div id="footer-carousel" class="owl-carousel">
-            <div> Your Content </div>
-            <div> Your Content </div>
-            <div> Your Content </div>
-            <div> Your Content </div>
-            <div> Your Content </div>
+            <div><img src="images/slide1.png"></div>
+            <div><img src="images/slide2.png"></div>
+            <div><img src="images/slide3.png"></div>
+            <div><img src="images/slide4.png"></div>
+            <div><img src="images/slide5.png"></div>
+
             <div> Your Content </div>
             <div> Your Content </div>
           </div>
