--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 </div>
                 <div class="row row-no-padding">
                   <div class="col-md-4">
-                    <ul>
+                    <ul class="first_column">
                       <li>
                         <a href="#"><span class="count-documents-o">10</span> Новые</a>
                       </li>
