--- a/index.html
+++ b/index.html
@@ -187,12 +187,12 @@
                         <p class="caption-position">заместитель-аппарата</p>
                       </div>
                     </div>
-<!--
-                    <div class="row all-birthdays">
-                      <div class="col-md-12 text-right">
-                        <a href="#">Показать всех</a>
-                      </div>
-                    </div>
+                    <!--
+<div class="row all-birthdays">
+<div class="col-md-12 text-right">
+<a href="#">Показать всех</a>
+</div>
+</div>
 -->
                   </div>
                 </div>
@@ -322,18 +322,23 @@
       </div>
 
       <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-1">
+          <div class="caret-left"></div>
+        </div>
+        <div class="col-md-10">
           <div id="footer-carousel" class="owl-carousel">
-            <div><img src="images/slide1.png"></div>
-            <div><img src="images/slide2.png"></div>
-            <div><img src="images/slide3.png"></div>
-            <div><img src="images/slide4.png"></div>
-            <div><img src="images/slide5.png"></div>
-
-            <div> Your Content </div>
-            <div> Your Content </div>
+            <div><img src="images/slide1.jpg"></div>
+            <div><img src="images/slide2.jpg"></div>
+            <div><img src="images/slide3.jpg"></div>
+            <div><img src="images/slide4.jpg"></div>
+            <div><img src="images/slide5.jpg"></div>
+            <div><img src="images/slide5.jpg"></div>
+            <div><img src="images/slide5.jpg"></div>
           </div>
         </div>
+        <div class="col-md-1">
+            <div class="caret-right"></div>
+          </div>
       </div>
     </div>
 
