--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
         </div>
       </div>
 
-      <div class="row">
+      <div class="row carousel">
         <div class="col-md-1">
           <div class="caret-left"></div>
         </div>
