--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@
               <span class="fa fa-angle-down"></span>
             </a>
             <ul class="dropdown-menu" role="menu">
-              <li><a href="#">Some action</a></li>
+              <li><a href="#">Расчетный листок</a></li>
+              <li><a href="#">Мои заявки в Техподдержку</a></li>
+              <li><a href="#">Инструкции пользователя</a></li>
+              <li><a href="#">Выход</a></li>
             </ul>
           </li>
         </ul>
