Simple line icons

--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
               <img src="images/scales.png" class="image-responsive" alt="" />
             </a>
           </li>
-          <li><a href="#" class="navbar-icon"><i class="fa fa-inbox"></i></a></li>
-          <li><a href="#" class="navbar-icon"><i class="fa fa-briefcase"></i></a></li>
-          <li><a href="#" class="navbar-icon"><i class="fa fa-video-camera"></i></a></li>
-          <li><a href="#" class="navbar-icon"><i class="fa fa-life-ring"></i></a></li>
+          <li><a href="#" class="navbar-icon"><i class="icon-drawer"></i></a></li>
+          <li><a href="#" class="navbar-icon"><i class="icon-briefcase"></i></a></li>
+          <li><a href="#" class="navbar-icon"><i class="icon-camcorder"></i></a></li>
+          <li><a href="#" class="navbar-icon"><i class="icon-support"></i></a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <li><a class="topbar-text" href="#">Русский</a></li>
@@ -58,25 +58,55 @@
         <li>
           <a class='expandable' href='#' title='Dashboard'>
             <span class='expanded-element'>Dashboard</span>
-            <i class="fa fa-home collapsed-element"></i>
+            <i class="icon-home collapsed-element"></i>
           </a>
         </li>
         <li>
           <a class='expandable' href='#' title='APIs'>
             <span class='expanded-element'>APIs</span>
-            <i class="fa fa-home collapsed-element"></i>
+            <i class="icon-users collapsed-element"></i>
           </a>
         </li>
         <li>
           <a class='expandable' href='#' title='Settings'>
             <span class='expanded-element'>Settings</span>
-            <i class="fa fa-home collapsed-element"></i>
+            <i class="icon-book-open collapsed-element"></i>
           </a>
         </li>
         <li>
           <a class='expandable' href='#' title='Account'>
             <span class='expanded-element'>Account</span>
-            <i class="fa fa-home collapsed-element"></i>
+            <i class="icon-microphone collapsed-element"></i>
+          </a>
+        </li>
+        <li>
+          <a class='expandable' href='#' title='Account'>
+            <span class='expanded-element'>Account</span>
+            <i class="icon-notebook collapsed-element"></i>
+          </a>
+        </li>
+        <li>
+          <a class='expandable' href='#' title='Account'>
+            <span class='expanded-element'>Account</span>
+            <i class="icon-pin collapsed-element"></i>
+          </a>
+        </li>
+        <li>
+          <a class='expandable' href='#' title='Account'>
+            <span class='expanded-element'>Account</span>
+            <i class="icon-camcorder collapsed-element"></i>
+          </a>
+        </li>
+        <li>
+          <a class='expandable' href='#' title='Account'>
+            <span class='expanded-element'>Account</span>
+            <i class="icon-doc collapsed-element"></i>
+          </a>
+        </li>
+        <li>
+          <a class='expandable' href='#' title='Account'>
+            <span class='expanded-element'>Account</span>
+            <i class="icon-camera collapsed-element"></i>
           </a>
         </li>
       </ul>
