--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
               <li><a href="#">Расчетный листок</a></li>
               <li><a href="#">Мои заявки в Техподдержку</a></li>
               <li><a href="#">Инструкции пользователя</a></li>
-              <li><a href="#">Выход</a></li>
+              <li><a href="#">Выход<i class="icon-power"></i></a></li>
             </ul>
           </li>
         </ul>
@@ -310,7 +310,7 @@
                   </div>
                   <div class="col-md-6 text-right">
                     <ul>
-                      <li><a href="#" class="icon"><i class="fa-newspaper-o"></i></a></li>
+                      <li><a href="#"><i class="icon-home"></i></a></li>
                     </ul>
                   </div>
                 </div>
