--- a/index.html
+++ b/index.html
@@ -26,12 +26,8 @@
             <p class="brand">Внутренний портал судебных органов</p>
           </a>
         </div>
-        <ul class="nav navbar-nav navbar-left">
-          <li>
-            <a href="#" class="navbar-icon">
-              <img src="images/scales.png" class="image-responsive" alt="" />
-            </a>
-          </li>
+        <ul class="nav navbar-nav">
+          <li><a href="#" class="navbar-icon"><img src="images/scales.png" class="image-responsive" alt="" /></a></li>
           <li><a href="#" class="navbar-icon"><i class="icon-drawer"></i></a></li>
           <li><a href="#" class="navbar-icon"><i class="icon-briefcase"></i></a></li>
           <li><a href="#" class="navbar-icon"><i class="icon-camcorder"></i></a></li>
@@ -52,6 +48,8 @@
               <li><a href="#">Выход<i class="icon-power"></i></a></li>
             </ul>
           </li>
+          <li><a href="#"><span class="divider"></span></a></li>
+          <li><a href="#"><i class="icon-speech"></i></a></li>
         </ul>
       </div>
     </nav>
@@ -130,7 +128,7 @@
                     <h2>Документооборот</h2>
                   </div>
                   <div class="col-md-4">
-                    <p><i class="fa fa-bell-o"></i> Срок исполнения</p>
+                    <p><i class="icon-bell"></i> Срок исполнения</p>
                     <p><span class="count-documents">10</span> Сегодня</p>
                   </div>
                 </div>
@@ -303,34 +301,48 @@
 
           <div class="row row-no-padding">
             <div class="col-md-12">
+
               <section id="news">
+
                 <div class="row">
                   <div class="col-md-6">
                     <h3>Новости</h3>
                   </div>
+
                   <div class="col-md-6 text-right">
-                    <ul>
+                    <ul class="iconbar">
+                      <li><a href="#"><i class="icon-home"></i></a></li>
+                      <li><a href="#"><i class="icon-home"></i></a></li>
+                      <li><a href="#"><i class="icon-home"></i></a></li>
+                      <li><a href="#"><i class="icon-home"></i></a></li>
                       <li><a href="#"><i class="icon-home"></i></a></li>
                     </ul>
                   </div>
                 </div>
+
                 <div class="row">
-                  <div class="col-md-9 text-left">
+                  <div class="col-md-9 text-left article">
                     <p>08/05/2015</p>
                     <p>В КазНУ им. аль-Фараби состоялось расширенное заседание Президиума Ассоциации выпускников с участием К.Мами</p>
                   </div>
                 </div>
-                <div class="row more">
-                  <div class="col-md-12 text-right">
+
+                <div class="row">
+                  <div class="col-md-9 article-border">
+                  </div>
+                  <div class="col-md-3 more">
                     <a href="#">Подробнее</a>
                   </div>
                 </div>
+
                 <div class="row all-news">
                   <div class="col-md-12 text-right">
                     <a href="#">Показать все новости</a>
                   </div>
                 </div>
+
               </section>
+
             </div>
           </div>
 
