--- a/index.html
+++ b/index.html
@@ -459,10 +459,12 @@
       </div>
 
       <div class="row carousel">
-        <div class="col-md-1">
+<!--
+        <div class="col-md-1 text-right">
           <div class="caret-left"></div>
         </div>
-        <div class="col-md-10">
+-->
+        <div class="col-md-12 text-center">
           <div id="footer-carousel" class="owl-carousel">
             <div><img src="images/slide1.jpg"></div>
             <div><img src="images/slide2.jpg"></div>
@@ -473,9 +475,11 @@
             <div><img src="images/slide5.jpg"></div>
           </div>
         </div>
-        <div class="col-md-1">
+<!--
+        <div class="col-md-1 text-left">
           <div class="caret-right"></div>
         </div>
+-->
       </div>
     </div>
 
@@ -529,6 +533,10 @@ $(document).ready(function() {
 
   $("#footer-carousel").owlCarousel({
     navigation: false,
+    navigationText: [
+      '<i class="fa fa-angle-left"></i>',
+      '<i class="fa fa-angle-right"></i>'
+    ],
     pagination: false,
     items: 5
   });
