--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
           <div class="caret-left"></div>
         </div>
 -->
-        <div class="col-md-12 text-center">
+        <div class="col-md-11 text-right">
           <div id="footer-carousel" class="owl-carousel">
             <div><img src="images/slide1.jpg"></div>
             <div><img src="images/slide2.jpg"></div>
@@ -532,7 +532,7 @@ $(document).ready(function() {
   });
 
   $("#footer-carousel").owlCarousel({
-    navigation: false,
+    navigation: true,
     navigationText: [
       '<i class="fa fa-angle-left"></i>',
       '<i class="fa fa-angle-right"></i>'
